# telegram-bot-template

./: .env.example  Makefile  README.md  pyproject.toml
bot/: __main__.py  config.py  loader.py
bot/filters/: admin.py
bot/keyboards/: default_menu.py
bot/routers/: __init__.py  error.py
bot/routers/admin/: __init__.py  start.py
bot/routers/user/: __init__.py  start.py
scripts/: create_handler.py
